--- a/package.json
+++ b/package.json
@@ -14,25 +14,24 @@
     "bluebird": "^3.5.1",
     "body-parser": "^1.18.2",
     "compression": "^1.7.1",
+    "cors": "^2.8.5",
     "dotenv": "4.0.0",
     "express": "^4.16.2",
     "helmet": "^3.15.0",
+    "jsonwebtoken": "^8.4.0",
     "lodash": "^4.17.5",
     "mongoose": "^4.13.11",
     "morgan": "^1.9.1",
     "nodemailer": "^4.4.1",
-    "passport": "^0.4.0",
-    "passport-local": "^1.0.0",
     "pug": "^2.0.0-rc.4",
-    "request": "^2.83.0",
-    "typescript": "^2.7.2",
-    "tsc-watch": "^1.0.31"
+    "request": "^2.83.0"
   },
   "devDependencies": {
     "@types/async": "^2.0.45",
     "@types/bcrypt-nodejs": "^0.0.30",
     "@types/bluebird": "^3.5.20",
     "@types/body-parser": "^1.16.8",
+    "@types/compression": "0.0.36",
     "@types/dotenv": "^4.0.2",
     "@types/express": "^4.11.1",
     "@types/helmet": "0.0.42",
@@ -45,7 +44,8 @@
     "@types/passport": "^0.4.3",
     "@types/passport-local": "^1.0.32",
     "@types/request": "^2.47.0",
-    "@types/compression": "0.0.36",
-    "tsc-watch": "^1.0.31"
+    "tsc-watch": "^1.0.31",
+    "tslint": "^5.12.0",
+    "typescript": "^2.7.2"
   }
 }
