--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bluebird": "^3.5.1",
     "body-parser": "^1.18.2",
     "compression": "^1.7.1",
+    "cookie-parser": "^1.4.3",
     "cors": "^2.8.5",
     "dotenv": "4.0.0",
     "express": "^4.16.2",
