--- a/package.json
+++ b/package.json
@@ -9,43 +9,43 @@
   "author": "Michael Wallert (mwallert@shift3tech.com)",
   "license": "MIT",
   "dependencies": {
-    "async": "^2.6.0",
+    "async": "^2.6.3",
     "bcrypt": "^3.0.6",
-    "bluebird": "^3.5.1",
-    "body-parser": "^1.18.2",
-    "compression": "^1.7.1",
-    "cookie-parser": "^1.4.3",
+    "bluebird": "^3.5.5",
+    "body-parser": "^1.19.0",
+    "compression": "^1.7.4",
+    "cookie-parser": "^1.4.4",
     "cors": "^2.8.5",
     "dotenv": "4.0.0",
-    "express": "^4.16.2",
-    "helmet": "^3.15.0",
-    "jsonwebtoken": "^8.4.0",
+    "express": "^4.17.1",
+    "helmet": "^3.20.0",
+    "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.15",
-    "mongoose": "^4.13.11",
+    "mongoose": "^5.6.11",
     "morgan": "^1.9.1",
     "nodemailer": "^4.4.1",
-    "pug": "^2.0.0-rc.4",
+    "pug": "^2.0.4",
     "request": "^2.83.0"
   },
   "devDependencies": {
-    "@types/async": "^2.0.45",
-    "@types/bluebird": "^3.5.20",
-    "@types/body-parser": "^1.16.8",
+    "@types/async": "^2.4.2",
+    "@types/bluebird": "^3.5.27",
+    "@types/body-parser": "^1.17.1",
     "@types/compression": "0.0.36",
     "@types/dotenv": "^4.0.2",
-    "@types/express": "^4.11.1",
+    "@types/express": "^4.17.1",
     "@types/helmet": "0.0.42",
-    "@types/lodash": "^4.14.91",
-    "@types/mongodb": "^3.0.5",
-    "@types/mongoose": "^4.7.34",
-    "@types/morgan": "^1.7.35",
+    "@types/lodash": "^4.14.137",
+    "@types/mongodb": "^3.3.0",
+    "@types/mongoose": "^4.7.47",
+    "@types/morgan": "^1.7.37",
     "@types/node": "^9.6.51",
-    "@types/nodemailer": "^4.3.4",
+    "@types/nodemailer": "^4.6.8",
     "@types/passport": "^0.4.3",
     "@types/passport-local": "^1.0.32",
-    "@types/request": "^2.47.0",
-    "tsc-watch": "^1.0.31",
-    "tslint": "^5.12.0",
+    "@types/request": "^2.48.2",
+    "tsc-watch": "^1.1.39",
+    "tslint": "^5.19.0",
     "typescript": "^3.5.3"
   }
 }
